--- a/streamapp/templates/streamapp/all_list_anime_terbaru.html
+++ b/streamapp/templates/streamapp/all_list_anime_terbaru.html
@@ -62,7 +62,7 @@
                             <div class="relative pb-[140%] overflow-hidden z-10">
                                 <!-- Image with Gradient Overlay -->
                                 <div class="absolute inset-0 w-full h-full">
-                                    <img src="{{ anime.url_cover }}" alt="{{ anime.judul }}" class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                                    <img src="{{ anime.cover }}" alt="{{ anime.judul }}" class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                                 </div>
                                 
